--- a/vue-charts/package.json
+++ b/vue-charts/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "babel-polyfill": "^6.26.0",
+    "chart.js": "^2.9.4",
     "core-js": "^2.6.12",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
